updated mongoClient constructor

--- a/server/public/views/templates/meals.html
+++ b/server/public/views/templates/meals.html
@@ -121,7 +121,7 @@
       </div>
       <div layout="row" layout-align="center center" class="totalList">
         <div id="dailyTotals" flex="15">
-          TOTALS:
+          Totals:
         </div>
         <div layout="row" flex style="margin-right: 15px">
             <div layout="column" class="totalCell" flex>
