--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -48,6 +48,7 @@ body {
 .dateBox {
   font-size: 2.5rem;
   text-align: center;
+  margin-left: auto;
 }
 
 .favorites h3 {
@@ -192,13 +193,9 @@ body {
   height: 6rem;
   padding: 0 2rem 1rem 2rem;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   border-bottom: 1px solid black;
-
-  & > * {
-    margin: 1rem;
-  }
 }
 
 .mealsHead h1 {
